# mate-control-center

./: .build.yml  .travis.yml  AUTHORS  CNAME  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gla11y.mk  index.html  makepot  mate-control-center.convert  mate-control-center.pot  meson.build  meson_options.txt  meson_post_install.py  org.mate.control-center.gschema.xml.in  org.mate.control-center.gschema.xml.in.in  org.mate.control-center.keybinding.gschema.xml.in  org.mate.control-center.keybinding.gschema.xml.in.in
capplets/: Makefile.am  meson.build
capplets/about-me/: Makefile.am  e-image-chooser.c  e-image-chooser.h  eel-alert-dialog.c  eel-alert-dialog.h  eel-gtk-macros.h  fingerprint-strings.h  mate-about-me-dialog.ui  mate-about-me-fingerprint.c  mate-about-me-fingerprint.h  mate-about-me-fingerprint.ui  mate-about-me-password.c  mate-about-me-password.h  mate-about-me-password.ui  mate-about-me.1  mate-about-me.c  mate-about-me.desktop.in  mate-about-me.desktop.in.in  meson.build  org.mate.mcc.am.gresource.xml  ui-a11y.suppr
capplets/appearance/: Makefile.am  appearance-desktop.c  appearance-desktop.h  appearance-font.c  appearance-font.h  appearance-main.c  appearance-style.c  appearance-style.h  appearance-support.c  appearance-support.h  appearance-themes.c  appearance-themes.h  appearance-ui.c  appearance-ui.h  appearance.h  mate-wp-info.c  mate-wp-info.h  mate-wp-item.c  mate-wp-item.h  mate-wp-xml.c  mate-wp-xml.h  meson.build  org.mate.mcc.appearance.gresource.xml  theme-installer.c  theme-installer.h  theme-save.c  theme-save.h  theme-util.c  theme-util.h
capplets/common/: Makefile.am  activate-settings-daemon.c  capplet-stock-icons.c  capplet-stock-icons.h  capplet-util.c  capplet-util.h  dconf-util.c  dconf-util.h  file-transfer-dialog.c  file-transfer-dialog.h  gtkrc-utils.c  gtkrc-utils.h  mate-theme-apply.c  mate-theme-apply.h  mate-theme-info.c  mate-theme-info.h  mate-theme-test.c  mateconf-property-editor.c  mateconf-property-editor.h  meson.build  theme-thumbnail.c  wm-common.c  wm-common.h
capplets/default-applications/: Makefile.am  default-applications.desktop.in.in  mate-at-session.desktop.in.in  mate-da-capplet.c  mate-da-capplet.h  mate-da-item.c  mate-da-item.h  mate-da-xml.c  mate-da-xml.h  mate-default-applications-properties.1  mate-default-applications-properties.desktop.in  mate-default-applications-properties.ui  mate-default-applications.xml.in  meson.build  org.mate.mcc.da.gresource.xml
capplets/desktop-icons/: Makefile.am  mate-desktop-icons-properties.desktop.in  mate-desktop-icons-properties.ui~  mate-desktop-icons.pc  mate-desktop-icons.pc.in  mate-desktop-icons.ui  mate-di-capplet.c  mate-di-capplet.h  org.mate.mcc.di.gresource.xml
capplets/display/: Makefile.am  display-capplet.ui  display-properties.desktop.in.in  mate-display-properties-install-systemwide.c  mate-display-properties.desktop.in  mate-display-properties.desktop.in.in  meson.build  org.mate.mcc.display.gresource.xml  org.mate.randr.policy.in  scrollarea.c  scrollarea.h  ui-a11y.suppr  xrandr-capplet.c
capplets/keybindings/: 00-multimedia-key.xml.in  01-desktop-key.xml.in  Makefile.am  eggaccelerators.c  eggaccelerators.h  eggcellrendererkeys.c  eggcellrendererkeys.h  mate-keybinding-properties.c  mate-keybinding-properties.ui  mate-keybinding.desktop.in  mate-keybinding.desktop.in.in  meson.build  org.mate.mcc.keybindings.gresource.xml  ui-a11y.suppr
capplets/keyboard/: Makefile.am  keyboard.desktop.in.in  mate-keyboard-properties-a11y-notifications.ui  mate-keyboard-properties-a11y.c  mate-keyboard-properties-a11y.h  mate-keyboard-properties-dialog.ui  mate-keyboard-properties-layout-chooser.ui  mate-keyboard-properties-model-chooser.ui  mate-keyboard-properties-options-dialog.ui  mate-keyboard-properties-xkb.c  mate-keyboard-properties-xkb.h  mate-keyboard-properties-xkblt.c  mate-keyboard-properties-xkbltadd.c  mate-keyboard-properties-xkbmc.c  mate-keyboard-properties-xkbot.c  mate-keyboard-properties-xkbpv.c  mate-keyboard-properties.c  (+4 more)
font-viewer/: Makefile.am  font-model.c  font-model.h  font-thumbnailer.c  font-utils.c  font-utils.h  font-view.c  ftstream-vfs.c  ftstream-vfs.h  gd-main-toolbar.c  gd-main-toolbar.h  mate-font-viewer.desktop.in  mate-font-viewer.desktop.in.in  mate-font-viewer.thumbnailer  meson.build  sushi-font-loader.c  sushi-font-loader.h  sushi-font-widget.c  sushi-font-widget.h  totem-resources.c  totem-resources.h
help/: LINGUAS  Makefile.am  mate-control-center.pot  meson.build
libslab/: Makefile.am  app-resizer.c  app-resizer.h  app-shell.c  app-shell.h  application-tile.c  application-tile.h  bookmark-agent.c  bookmark-agent.h  directory-tile.c  directory-tile.h  document-tile.c  double-click-detector.c  double-click-detector.h  libslab-utils.c  libslab-utils.h  libslab.pc.in  mate-slab.pc.in  mate-utils.c  mate-utils.h  nameplate-tile.c  nameplate-tile.h  search-bar.c  search-bar.h  search-context-picker.c  search-entry.c  shell-window.c  shell-window.h  slab-mate-util.c  slab-mate-util.h  slab-section.c  slab-section.h  slab.h  system-tile.c  system-tile.h  themed-icon.c  themed-icon.h  tile-action.c  tile.c  tile.h
man/: Makefile.am  mate-about-me.1  mate-at-properties.1  mate-control-center.1  mate-display-properties-install-systemwide.1  mate-display-properties.1  mate-font-viewer.1  mate-keybinding-properties.1  mate-keyboard-properties.1  mate-mouse-properties.1  mate-network-properties.1  mate-thumbnail-font.1  mate-typing-monitor.1  mate-window-properties.1  meson.build
shell/: Makefile.am  app-shell.h  control-center.c  double-click-detector.c  libslab-utils.c  mate-preferences-categories.menu  matecc.desktop.in  matecc.desktop.in.in  matecc.directory.desktop.in  matecc.menu  meson.build  slab-mate-util.h  slab-section.c  themed-icon.c  tile.h
typing-break/: Makefile.am  drw-break-window.c  drw-break-window.h  drw-monitor.c  drw-monitor.h  drw-selection.c  drw-selection.h  drw-timer.c  drw-timer.h  drw-utils.c  drw-utils.h  drwright.c  drwright.h  main.c  meson.build
(+2395 files in other folders)
