SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	display \
	keyboard \
	keybindings \
	mouse \
	network \
	time-admin \
	windows \
	about-me

DIST_SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	keybindings \
	keyboard \
	mouse \
	network \
	time-admin \
	windows \
	display \
	about-me

-include $(top_srcdir)/git.mk
