SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	display \
	keyboard \
	keybindings \
	mouse \
	network \
	desktop-icons \
	windows \
        about-me

DIST_SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	keybindings \
	keyboard \
	mouse \
	network \
	desktop-icons \
	windows \
	display \
	about-me

-include $(top_srcdir)/git.mk
