SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	display \
	keyboard \
	keybindings \
	mouse \
	network \
	windows \
	about-me \
	system-info

if HAVE_SYSTEMD
SUBDIRS += time-admin
endif

DIST_SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	keybindings \
	keyboard \
	mouse \
	network \
	time-admin \
	windows \
	display \
	about-me \
	system-info

-include $(top_srcdir)/git.mk
