@YELP_HELP_RULES@

HELP_ID = mate-control-center
HELP_FILES = index.docbook config-accessibility-keyboard.xml config-background.xml config-behavior.xml config-cds.xml config-default-apps.xml config-file-type.xml config-hints.xml config-html.xml config-kbd.xml config-keybindings.xml config-mouse.xml config-screensaver.xml config-themes.xml

HELP_LINGUAS = ca ca@valencia cs de el en_GB es fr id it ja oc pa pl pt pt_BR ru sv th uk vi zh_CN

-include $(top_srcdir)/git.mk
